--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="CustomHtmlHelpers\CustomHtmlHelpers.cs" />
     <Compile Include="CustomValidation\FileConstraint.cs" />
+    <Compile Include="CustomValidation\AmountBasedOnAge.cs" />
     <Compile Include="Extension\Helper.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
