--- a/WebApplication3/packages.config
+++ b/WebApplication3/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net451" />
   <package id="AutoMapper" version="4.1.0" targetFramework="net451" />
+  <package id="bootbox" version="4.3.0" targetFramework="net451" />
   <package id="bootstrap" version="3.0.0" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="foolproof" version="0.9.4518" targetFramework="net451" />
