Added constant instead of magic string for differnt roles

--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -475,6 +475,7 @@
     <Compile Include="Models\Rain.cs" />
     <Compile Include="Models\Referral.cs" />
     <Compile Include="Models\Instrument.cs" />
+    <Compile Include="Models\RoleNames.cs" />
     <Compile Include="Models\Song.cs" />
     <Compile Include="Models\Company.cs" />
     <Compile Include="Models\Standard.cs" />
