--- a/WebApplication3/packages.config
+++ b/WebApplication3/packages.config
@@ -6,6 +6,11 @@
   <package id="bootstrap" version="3.0.0" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="foolproof" version="0.9.4518" targetFramework="net451" />
+  <package id="Glimpse" version="1.8.6" targetFramework="net451" />
+  <package id="Glimpse.Ado" version="1.7.3" targetFramework="net451" />
+  <package id="Glimpse.AspNet" version="1.8.0" targetFramework="net451" />
+  <package id="Glimpse.EF6" version="1.6.5" targetFramework="net451" />
+  <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net451" />
   <package id="jQuery" version="1.12.4" targetFramework="net451" />
   <package id="jquery.datatables" version="1.10.11" targetFramework="net451" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net451" />
