--- a/WebApplication3/packages.config
+++ b/WebApplication3/packages.config
@@ -39,6 +39,7 @@
   <package id="PagedList" version="1.17.0.0" targetFramework="net451" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net451" />
   <package id="Respond" version="1.2.0" targetFramework="net451" />
+  <package id="toastr" version="2.1.1" targetFramework="net451" />
   <package id="Twitter.Typeahead" version="0.11.1" targetFramework="net451" />
   <package id="WebGrease" version="1.5.2" targetFramework="net451" />
 </packages>
