--- a/WebApplication3/Web.config
+++ b/WebApplication3/Web.config
@@ -15,7 +15,9 @@
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" /> 
+    <add key="FacebookKey" value="abcde" /> 
+  <add key="FacebookSecret" value="123443gsdg" />
   </appSettings>
   <system.web>
     <caching>
