Error Resource not found IIS exception handling

--- a/WebApplication3/bin/WebApplication3.dll.config
+++ b/WebApplication3/bin/WebApplication3.dll.config
@@ -15,7 +15,9 @@
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" /> 
+    <add key="FacebookKey" value="abcde" /> 
+  <add key="FacebookSecret" value="123443gsdg" />
   </appSettings>
   <system.web>
     <caching>
@@ -25,8 +27,8 @@
         </outputCacheProfiles>
       </outputCacheSettings>
     </caching>
-    <customErrors mode="RemoteOnly">
-      <error statusCode="404" redirect="~/Error/NotFound" />
+    <customErrors mode="On">
+      <error statusCode="404" redirect="~/404.html" />
     </customErrors>
     <globalization culture="en-us" />
     <authentication mode="None" />
