--- a/WebApplication3/Web.config
+++ b/WebApplication3/Web.config
@@ -27,8 +27,8 @@
         </outputCacheProfiles>
       </outputCacheSettings>
     </caching>
-    <customErrors mode="RemoteOnly">
-      <error statusCode="404" redirect="~/Error/NotFound" />
+    <customErrors mode="On">
+      <error statusCode="404" redirect="~/404.html" />
     </customErrors>
     <globalization culture="en-us" />
     <authentication mode="None" />
