Error handling exception by IIS

--- a/WebApplication3/Web.config
+++ b/WebApplication3/Web.config
@@ -49,7 +49,12 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" /></handlers><validation validateIntegratedModeConfiguration="false" /></system.webServer>
+    <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" /></handlers><validation validateIntegratedModeConfiguration="false" />
+    <httpErrors errorMode="Custom">
+      <remove statusCode="404"/>
+    <error statusCode="404" path="404.html" responseMode="File"></error>
+    </httpErrors>
+      </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
