Add new table to DB and Update model and what is ORM

--- a/DbFirst/App.config
+++ b/DbFirst/App.config
@@ -21,3 +21,8 @@
     </providers>
   </entityFramework>
 </configuration>
+
+<!--data-source means -> SQL SErver Instance , 
+Initial Catalog -> Means Db Name in that server
+Intwegertare Security = true means we are usiong windows authenication security
+-->
