Tell DBContext which connection String to use

--- a/CodesFirst/App.config
+++ b/CodesFirst/App.config
@@ -17,4 +17,10 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <!--If we wold have used name as "PlutoContext" then we don't need to do anything in DbContext Constructor as we are following the convention, unlike below-->
+
+    <add name="DefaultConnection" connectionString="data source=.\MSSQLSERVER01;initial catalog=PlutoCodeFirst;integrated security=SSPI;" providerName="System.Data.SqlClient" />
+
+  </connectionStrings>
 </configuration>
