Added a new class to a model via code first

--- a/PlutoContext/PlutoContext.csproj
+++ b/PlutoContext/PlutoContext.csproj
@@ -65,6 +65,10 @@
     <Compile Include="Migrations\201712032348159_categorytablle.Designer.cs">
       <DependentUpon>201712032348159_categorytablle.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712032356283_categoryADDED.cs" />
+    <Compile Include="Migrations\201712032356283_categoryADDED.Designer.cs">
+      <DependentUpon>201712032356283_categoryADDED.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="PlutoContext.cs" />
     <Compile Include="Program.cs" />
@@ -81,6 +85,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712032348159_categorytablle.resx">
       <DependentUpon>201712032348159_categorytablle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712032356283_categoryADDED.resx">
+      <DependentUpon>201712032356283_categoryADDED.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
