Careful while renaming the column, copy the data first, make column NULLABLE

--- a/PlutoContext/PlutoContext.csproj
+++ b/PlutoContext/PlutoContext.csproj
@@ -73,6 +73,10 @@
     <Compile Include="Migrations\201712040003353_datetimenulabel.Designer.cs">
       <DependentUpon>201712040003353_datetimenulabel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712040006159_renamedcolumnname.cs" />
+    <Compile Include="Migrations\201712040006159_renamedcolumnname.Designer.cs">
+      <DependentUpon>201712040006159_renamedcolumnname.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="PlutoContext.cs" />
     <Compile Include="Program.cs" />
@@ -95,6 +99,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712040003353_datetimenulabel.resx">
       <DependentUpon>201712040003353_datetimenulabel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712040006159_renamedcolumnname.resx">
+      <DependentUpon>201712040006159_renamedcolumnname.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
