Adding Reference data application specific

--- a/PlutoContext/PlutoContext.csproj
+++ b/PlutoContext/PlutoContext.csproj
@@ -88,6 +88,10 @@
     <Compile Include="Migrations\201712040015570_dtepublisheddeleted1.Designer.cs">
       <DependentUpon>201712040015570_dtepublisheddeleted1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712040040323_seeddata.cs" />
+    <Compile Include="Migrations\201712040040323_seeddata.Designer.cs">
+      <DependentUpon>201712040040323_seeddata.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="PlutoContext.cs" />
     <Compile Include="Program.cs" />
@@ -122,6 +126,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712040015570_dtepublisheddeleted1.resx">
       <DependentUpon>201712040015570_dtepublisheddeleted1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712040040323_seeddata.resx">
+      <DependentUpon>201712040040323_seeddata.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
