One to One Fluent API

--- a/PlutoContext/PlutoContext.csproj
+++ b/PlutoContext/PlutoContext.csproj
@@ -97,9 +97,11 @@
       <DependentUpon>201712040314249_seeddatasdsdr.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Mobile.cs" />
     <Compile Include="PlutoContext.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SIM.cs" />
     <Compile Include="Tag.cs" />
   </ItemGroup>
   <ItemGroup>
