Remove RemoveRange OnCascadeOnDelete

--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -683,7 +683,7 @@
     <Content Include="Content\typeahead.css" />
     <Content Include="Content\WE.css" />
     <Content Include="favicon.ico" />
-    <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Helpers\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="404.html" />
@@ -877,9 +877,9 @@
     <Folder Include="Views\Rain\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Helpers\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Helpers\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Helpers\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
   </ItemGroup>
