--- a/TestService/TestService.csproj
+++ b/TestService/TestService.csproj
@@ -48,6 +48,7 @@
     <Compile Include="IMyService.cs" />
     <Compile Include="MyService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
