--- a/EmployeeService/EmployeeService.csproj
+++ b/EmployeeService/EmployeeService.csproj
@@ -46,7 +46,10 @@
   <ItemGroup>
     <Compile Include="Employee.cs" />
     <Compile Include="EmployeeService.cs" />
+    <Compile Include="EmployeeType.cs" />
+    <Compile Include="FullTimeEmployee.cs" />
     <Compile Include="IEmployeeService.cs" />
+    <Compile Include="PartTimeEmployee.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
