WCF Service with known type complete flow Student Added

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\CompanyClient\packages.config" />
+  <repository path="..\MyServiceHost\packages.config" />
   <repository path="..\RepositoryPatternPrac\packages.config" />
+  <repository path="..\WebApplication1\packages.config" />
   <repository path="..\WebApplication3\packages.config" />
 </repositories>
