--- a/WCF/EmployeeService/EmployeeServiceHost/App.config
+++ b/WCF/EmployeeService/EmployeeServiceHost/App.config
@@ -4,11 +4,11 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <connectionStrings>
-    <add name="DBCS" connectionString="data source =.\; initial catalog = SAMPLE; integrated security = True;"/>
-    <!--<add name="DBCS" connectionString="data source =.\Dev-10\MSSQLSERVER; initial catalog = SAMPLE; integrated security = True;"/>-->
-    <!--<add name="DBCS" connectionString="data source =.\Dev-10; initial catalog = SAMPLE; integrated security = True;"/>-->
-    <!--<add name="DBCS" connectionString="data source =.\MSSQLSERVER; initial catalog = SAMPLE; integrated security = True;"/>-->
-    <!--<add name="DBCS" connectionString="data source =.\MSSQLSERVER01; initial catalog = SAMPLE; integrated security = True"/>-->
+    <!--<add name="DBCS" connectionString="data source =.\; initial catalog = SAMPLE; integrated security = True;"/>
+    --><!--<add name="DBCS" connectionString="data source =.\Dev-10\MSSQLSERVER; initial catalog = SAMPLE; integrated security = True;"/>--><!--
+    --><!--<add name="DBCS" connectionString="data source =.\Dev-10; initial catalog = SAMPLE; integrated security = True;"/>--><!--
+    --><!--<add name="DBCS" connectionString="data source =.\MSSQLSERVER; initial catalog = SAMPLE; integrated security = True;"/>-->
+    <add name="DBCS" connectionString="data source =.\MSSQLSERVER01; initial catalog = SAMPLE; integrated security = True"/>
   </connectionStrings>
   <system.serviceModel>
     <services>
