Config changed to stop returning extra/missing information coming from clients

--- a/WCF/EmployeeService/EmployeeServiceHost/App.config
+++ b/WCF/EmployeeService/EmployeeServiceHost/App.config
@@ -24,10 +24,13 @@
     </services>
     <behaviors>
       <serviceBehaviors>
+        <!--This is for Meta Data Exchange-->
         <behavior name="mexBehaviour">
           <serviceMetadata httpGetEnabled="true"/>
+          <dataContractSerializer ignoreExtensionDataObject="true"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
   </system.serviceModel>
 </configuration>
+<!--Suppose we wanted to ignore the extra stuff that clients is sending. we do not want to return it to Cient then we can simply add above sonfig-->
