--- a/HelloWebClient/HelloWebClient/bin/HelloWebClient.dll.config
+++ b/HelloWebClient/HelloWebClient/bin/HelloWebClient.dll.config
@@ -38,6 +38,7 @@
         <binding name="NetTcpBinding_IHelloService" />
       </netTcpBinding>
     </bindings>
+    <!--Below gets automatically generated when we add reference to the WCF Service. this is the address where client will try to consume the wcf serviuce-->
     <client>
       <endpoint address="http://localhost:8080/HelloService" binding="basicHttpBinding"
         bindingConfiguration="BasicHttpBinding_IHelloService" contract="HelloService.IHelloService"
@@ -52,3 +53,5 @@
     </client>
   </system.serviceModel>
 </configuration>
+
+
