WCF Service hosted as Windows Services Awesome

--- a/WCF_Hello/HelloService/WindowsClient/App.config
+++ b/WCF_Hello/HelloService/WindowsClient/App.config
@@ -14,7 +14,7 @@
                 bindingConfiguration="NetTcpBinding_IHelloService" contract="HelloService.IHelloService"
                 name="NetTcpBinding_IHelloService">
                 <identity>
-                    <userPrincipalName value="UNBREAKABLE\lenovo" />
+                    <servicePrincipalName value="host/Unbreakable" />
                 </identity>
             </endpoint>
         </client>
