IIS with WAS Enabled to support all trascport protocls

--- a/IIS/HelloService/HelloServiceIIS/Web.config
+++ b/IIS/HelloService/HelloServiceIIS/Web.config
@@ -10,10 +10,16 @@
     </behaviors>
     <services>
       <service behaviorConfiguration="mexBehavior" name="HelloService.HelloService">
-        <endpoint address="HelloService" binding="basicHttpBinding" contract="HelloService.IHelloService"/>
+        <!--<endpoint address="HelloService" binding="basicHttpBinding" contract="HelloService.IHelloService"/>-->
+        <!--THe hosting by IIS Only supports the HTTP Protocol; if we want tcp then we need to use WAS  so lets change the bindings-->
+        <endpoint address="HelloService" binding="netTcpBinding" contract="HelloService.IHelloService"/>
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8080"/>
+            <add baseAddress="net.tcp://localhost:8090"/>
+            <!--SO with above vhanges we think eerything will work but we get below error: Could not find a base address that matches scheme net.tcp for the endpoint with binding NetTcpBinding. Registered base address schemes are [http]. -->
+            <!--So lets work on gettng WAS-->
+            <!--Watch this vide for configuartion https://www.youtube.com/watch?v=CbYV3R7Iebg&index=31&list=PL6n9fhu94yhVxEyaRMaMN_-qnDdNVGsL1-->
           </baseAddresses>
         </host>
       </service>
