--- a/IIS/HelloService/WindowsClient/App.config
+++ b/IIS/HelloService/WindowsClient/App.config
@@ -5,14 +5,22 @@
     </startup>
     <system.serviceModel>
         <bindings>
-            <basicHttpBinding>
-                <binding name="BasicHttpBinding_IHelloService" />
-            </basicHttpBinding>
+            <netTcpBinding>
+                <binding name="NetTcpBinding_IHelloService">
+                    <security mode="Transport">
+                        <transport clientCredentialType="Windows" />
+                        <message clientCredentialType="Windows" />
+                    </security>
+                </binding>
+            </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="http://unbreakable/Hello/Service.svc/HelloService"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IHelloService"
-                contract="HelloService.IHelloService" name="BasicHttpBinding_IHelloService" />
+            <endpoint address="net.tcp://unbreakable/Hello/Service.svc/HelloService"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IHelloService" contract="HelloService.IHelloService" name="NetTcpBinding_IHelloService">
+                <identity>
+                    <servicePrincipalName value="host/Unbreakable" />
+                </identity>
+            </endpoint>
         </client>
     </system.serviceModel>
 </configuration>
