--- a/Host/App.config
+++ b/Host/App.config
@@ -4,6 +4,11 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <system.serviceModel>
+    <bindings>
+      <netTcpBinding>
+        <binding name="netTCP" receiveTimeout="00:00:10"></binding>
+      </netTcpBinding>
+    </bindings>
     <behaviors>
       <serviceBehaviors>
         <behavior name="mexBehavior">
@@ -14,7 +19,7 @@
     </behaviors>
     <services>
       <service behaviorConfiguration="mexBehavior" name="SimpleService.SimpleService">
-        <endpoint address="ReportService" binding="netTcpBinding" contract="SimpleService.ISimpleService"/>
+        <endpoint address="ReportService" binding="netTcpBinding" contract="SimpleService.ISimpleService" bindingConfiguration="netTCP"/>
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8080"/>
