How to view the session of client and service

--- a/Host/App.config
+++ b/Host/App.config
@@ -6,7 +6,9 @@
   <system.serviceModel>
     <bindings>
       <netTcpBinding>
-        <binding name="netTCP" receiveTimeout="00:00:10"></binding>
+        <binding name="netTCP">
+        </binding>
+
       </netTcpBinding>
     </bindings>
     <behaviors>
