--- a/SimpleClient/App.config
+++ b/SimpleClient/App.config
@@ -6,7 +6,9 @@
     <system.serviceModel>
         <bindings>
             <netTcpBinding>
-                <binding name="NetTcpBinding_ISimpleService" />
+                <binding name="NetTcpBinding_ISimpleService">
+                    <reliableSession enabled="true" />
+                </binding>
             </netTcpBinding>
         </bindings>
         <client>
