Session id for client and Service is same in wsHttpBinding

--- a/Host/App.config
+++ b/Host/App.config
@@ -5,11 +5,15 @@
   </startup>
   <system.serviceModel>
     <bindings>
-      <netTcpBinding>
+      <wsHttpBinding>
+        <binding name="wsHttp">
+          
+        </binding>
+      </wsHttpBinding>
+      <!--<netTcpBinding>
         <binding name="netTCP">
         </binding>
-
-      </netTcpBinding>
+      </netTcpBinding>-->
     </bindings>
     <behaviors>
       <serviceBehaviors>
@@ -21,7 +25,7 @@
     </behaviors>
     <services>
       <service behaviorConfiguration="mexBehavior" name="SimpleService.SimpleService">
-        <endpoint address="ReportService" binding="netTcpBinding" contract="SimpleService.ISimpleService" bindingConfiguration="netTCP"/>
+        <endpoint address="ReportService" binding="wsHttpBinding" contract="SimpleService.ISimpleService" bindingConfiguration="wsHttp"/>
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8080"/>
@@ -32,3 +36,5 @@
     </services>
   </system.serviceModel>
 </configuration>
+<!--The clinet session id and the service session id are smae but does not look like sAME as they are mapped internally-->
+<!--With respect to WSHttpBinding the session id are always even when you view it (no mapping)-->
