--- a/SimpleClient/App.config
+++ b/SimpleClient/App.config
@@ -5,16 +5,16 @@
     </startup>
     <system.serviceModel>
         <bindings>
-            <netTcpBinding>
-                <binding name="NetTcpBinding_ISimpleService">
-                    <reliableSession enabled="true" />
+            <wsHttpBinding>
+                <binding name="WSHttpBinding_ISimpleService">
+                    <security mode="Message" />
                 </binding>
-            </netTcpBinding>
+            </wsHttpBinding>
         </bindings>
         <client>
-            <endpoint address="net.tcp://localhost:8090/ReportService" binding="netTcpBinding"
-                bindingConfiguration="NetTcpBinding_ISimpleService" contract="SimpleService.ISimpleService"
-                name="NetTcpBinding_ISimpleService">
+            <endpoint address="http://localhost:8080/ReportService" binding="wsHttpBinding"
+                bindingConfiguration="WSHttpBinding_ISimpleService" contract="SimpleService.ISimpleService"
+                name="WSHttpBinding_ISimpleService">
                 <identity>
                     <userPrincipalName value="DEV-10\Dev-10" />
                 </identity>
