Binding Supports session

--- a/SimplesClient/App.config
+++ b/SimplesClient/App.config
@@ -5,14 +5,18 @@
     </startup>
     <system.serviceModel>
         <bindings>
-            <basicHttpBinding>
-                <binding name="BasicHttpBinding_ISimplesService" />
-            </basicHttpBinding>
+            <netTcpBinding>
+                <binding name="NetTcpBinding_ISimplesService" />
+            </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:8080/SimplesService" binding="basicHttpBinding"
-                bindingConfiguration="BasicHttpBinding_ISimplesService" contract="SimplesService.ISimplesService"
-                name="BasicHttpBinding_ISimplesService" />
+            <endpoint address="net.tcp://localhost:8090/SimplesService" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_ISimplesService" contract="SimplesService.ISimplesService"
+                name="NetTcpBinding_ISimplesService">
+                <identity>
+                    <userPrincipalName value="DEV-10\Dev-10" />
+                </identity>
+            </endpoint>
         </client>
     </system.serviceModel>
 </configuration>
