--- a/SimplesHost/App.config
+++ b/SimplesHost/App.config
@@ -14,10 +14,11 @@
     </behaviors>
     <services>
       <service behaviorConfiguration="mexBehavior" name="SimplesService.SimplesService">
-        <endpoint address="SimplesService" binding="basicHttpBinding" contract="SimplesService.ISimplesService"/>
+        <endpoint address="SimplesService" binding="netTcpBinding" contract="SimplesService.ISimplesService"/>
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8080"/>
+            <add baseAddress="net.tcp://localhost:8090"/>
           </baseAddresses>
         </host>
       </service>
