--- a/SimplestHost/App.config
+++ b/SimplestHost/App.config
@@ -4,7 +4,17 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <system.serviceModel>
-    
+    <bindings>
+      <!--<wsHttpBinding>
+        <binding name="wsHttp">
+
+        </binding>
+      </wsHttpBinding>-->
+      <!--<netTcpBinding>
+        <binding name="netTCP">
+        </binding>
+      </netTcpBinding>-->
+    </bindings>
     <behaviors>
       <serviceBehaviors>
         <behavior name="mexBehavior">
@@ -15,15 +25,16 @@
       </serviceBehaviors>
     </behaviors>
     <services>
-      <service behaviorConfiguration="mexBehavior" name="SimplesService.SimplesService">
-        <endpoint address="SimplesService" binding="netTcpBinding" contract="SimplesService.ISimplesService"/>
+      <service behaviorConfiguration="mexBehavior" name="SimplestService.Simplestservice">
+        <endpoint address="ReportService" binding="basicHttpBinding" contract="SimplestService.ISimplestservice"/>
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8080"/>
-            <add baseAddress="net.tcp://localhost:8090"/>
           </baseAddresses>
         </host>
       </service>
     </services>
   </system.serviceModel>
 </configuration>
+
+<!--With Instance Per Call settings and max Concurrent instacs is 2 and suppose maxconcurrentcalls is 3 even then only 2 concurrent call will run becaus eonly 2 instaneces are allowed at a time-->
