--- a/SimplestHost/App.config
+++ b/SimplestHost/App.config
@@ -38,3 +38,4 @@
 </configuration>
 
 <!--With Instance Per Call settings and max Concurrent instacs is 2 and suppose maxconcurrentcalls is 3 even then only 2 concurrent call will run becaus eonly 2 instaneces are allowed at a time-->
+<!--Now suppose if the instance context is set  to Single then in that case we can have 3 concurrent calls because al of them will use same insance-->
