Explicitly disabled Security in WSHJTTPBINDING

--- a/SecurityHost/app.config
+++ b/SecurityHost/app.config
@@ -33,7 +33,7 @@
     <bindings>
       <wsHttpBinding>
         <binding name="wsHttp">
-
+          <security mode="None"></security>
         </binding>
       </wsHttpBinding>
       <!--<netTcpBinding>
